# research

./: pyproject.toml
zk/: groth16.ipynb  groth16_detailed.ipynb  plonk.ipynb  plonk_components.ipynb  primitives.ipynb  qap.ipynb  utils.py
